fix overflow block-search

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -268,6 +268,10 @@ body .twitter_result_item {
   margin-right:0px;
 }
 
+#block-search {
+  overflow: hidden;
+}
+
 .block-title{
   text-align:center;
   background: green;
